# CUAVbot

./: .gitignore  README.md  bot.py  config.json  pyproject.toml  utils.py
config/: __init__.py  config.json  config.py  dnd  help  scheme.py  settings.toml
core/: control.py  entity.py
core/depend/: blacklist.py  permission.py
dnd/: Fashu2_0.json
function/: anime_timeline.py  baidu_search.py  function.py  image_downloader.py  judge.py  restart.py  search.py  setu.py
function/arktools/: akhr.json  ark_formula.json  ark_items.json  ark_out_of_bot.py  ark_stages_info.json  ark_stages_info_all.json  arks.py
function/dnd/: roll_roulette_.py
function/tenkafuma/: tenka.json  tenka.py
function/timer_event/: time_event.py  timer_for_crontabify.py
modules/: Choyen5000.py  DailyNews.py  RestartLaunch.py
modules/AutoFriend/: __init__.py  welcome
modules/AutoPix/: __init__.py  pixiv.py  pixiv_account.json
modules/BotHelp/: __init__.py
modules/SeTu/: __init__.py  image_downloader.py  setu.py
modules/TimeAnnouncement/: __init__.py  wake-the-fxxk-up_.silk
modules/required/BotManager/: __init__.py
modules/required/BotStatus/: __init__.py  status.html  status.py
modules/required/ExceptionCatch/: __init__.py
modules/required/MessageLogger/: __init__.py
modules/required/ModulesControl/: __init__.py  command.py
modules/self/: ArknightsOperatorSearcher.py  DailyNews.py  GifReverse.py  IsOrNot.py  MoYu.py  Nbnhhsh.py  YoutubeResolver.py
modules/self/AlarmClock/: Clock.py  __init__.py  command.py
modules/self/AnimeSceneSearch/: __init__.py  img2anime.py
modules/self/AutoPix/: TokenHandler.py  User.py  __init__.py  command.py  entity.py  service.py
modules/self/BiliShareResolver/: __init__.py
modules/self/BiliSub/: __init__.py  command.py  entity.py  service.py  sub.py  subctrl.py
modules/self/ChatGPT/: __init__.py  chatbot.py  command.py  entity.py  service.py
modules/self/EpicFreeGame/: __init__.py  service.py
modules/self/GenShin/: __init__.py  command.py  db.py  (+1 more)
service/db/: __init__.py  database.py  service.py
utils/: __init__.py  func_retry.py  logger_rewrite.py  msgtool.py  session.py  t2i.py  tool.py
(+18 files in other folders)
